<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formulary"
                android:gravity="center"
                android:visibility="visible" />

            <TextView
                android:id="@+id/etxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/etxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/telefono"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:text="@string/telefono" />

            <TextView
                android:id="@+id/etxtCumple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/cumpleanios"
                android:importantForAutofill="no"
                android:inputType="date"
                android:text="@string/cumpleanios" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="79dp">

                <RadioButton
                    android:id="@+id/rbMujer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer" />

                <RadioButton
                    android:id="@+id/rbHombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hombre" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_preferido" />

            <CheckBox
                android:id="@+id/chbkRojo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rojo" />

            <CheckBox
                android:id="@+id/chkbVerde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verde" />

            <CheckBox
                android:id="@+id/chkbAmarillo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amarillo" />

            <CheckBox
                android:id="@+id/chkbMorado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/morado" />

            <CheckBox
                android:id="@+id/chkbAzul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/azul" />

            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/mostrar" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/limpiar" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>